[package]
name = "neovim-client"
version = "0.1.0"
authors = ["McFreely <paul@mcfreely.com>"]
license = "LGPL-3.0"
description = "msgpack-rpc neovim client"
repository = "https://github.com/McFreely/neovim-client"
readme = "README.md"
categories = ["api-bindings"]
keywords = ["neovim"]
exclude = ["generate.bat", "Makefile"]
edition = "2018"

[dependencies]
rmpv = { version ="0.4", features=["with-serde"] }
log = "0.4"

[target.'cfg(unix)'.dependencies]
unix_socket = "0.5.0"

[dev-dependencies]
tempdir = "0.3"
